--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div id="navbar-container">
+      <div id="navbar">
+        <p id="header-title">Chris Speight</p>
+        <div id="navbar-links">
+          <ul>
+            <li>About Me</li>
+            <li>Projects</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <section id="welcome-section">
+      <h1>Chris Speight</h1>
+    </section>
+
+    <section id="projects"></section>
+  </body>
 </html>
