basic requirements complete, needs a lot of work to add content though

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Chris Speight Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,8 +16,12 @@
         <p id="header-title">Chris Speight</p>
         <div id="navbar-links">
           <ul>
-            <li>About Me</li>
-            <li>Projects</li>
+            <li>
+              <a href="#welcome-section">About Me</a>
+            </li>
+            <li>
+              <a href="#projects">Projects</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -25,8 +29,20 @@
 
     <section id="welcome-section">
       <h1>Chris Speight</h1>
+      <a href="https://github.com/CRSpeight/" target="_blank" rel="noopener noreferrer" id="profile-link"
+        >My GitHub Portfolio</a
+      >
     </section>
 
-    <section id="projects"></section>
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="project-container">
+        <div class="project-tile">
+          <a href="https://crspeight.github.io/FCC-Product-Landing-page/" target="_blank" rel="noopener noreferrer"
+            >Project Landing Page</a
+          >
+        </div>
+      </div>
+    </section>
   </body>
 </html>
